--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="title">Bioequivalencia entre <%= @medicine.nombre.pluralize %></h3>
+            <h3 class="title">Bioequivalencia entre <%= @medicine.nombre %></h3>
             <p class="slog">Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin ty</p>
           </div>
         </div>
