--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,24 @@
   <title>PhysicBe</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
+  <script src="//maps.google.com/maps/api/js?v=3.18&sensor=false&client=&key=&libraries=geometry&libraries=places&language=&hl=&region="></script>
+  <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
+  <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= render "partials/navbar" %>
-
-<!-- <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p> -->
+<% if notice.present? %>
+  <div class="alert alert-success">
+    <p class="notice"><%= notice %></p>
+  </div>
+<% end %>
+<% if alert.present? %>
+  <div class="alert alert-dange">
+    <p class="alert"><%= alert %></p>
+  </div>
+<% end %>
   <%= yield %>
 
 </body>
