--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <section class="main-home">
-  <div class="home-bg" style="background: url(<%= asset_path('main') %>) no-repeat center;"></div>
+  <div class="home-bg" style="background: url(https://res.cloudinary.com/dyujxfph9/image/upload/v1461443025/main_rfvrim.jpg) no-repeat center;"></div>
   <div class="home__header-content">
     <h1 class="intro-title">Búsca el medicamento que necesites</h1>
     <p class="intro-text">
@@ -30,7 +30,7 @@
   input_search.on('keyup',function () {
     if (input_search.val().length > 0) {
       $("#search_box").fadeIn("medium")
-      $.ajax("http://localhost:3000/type_ahead/"+input_search.val());
+      $.ajax("/type_ahead/"+input_search.val());
     }else {
       $("#search_box").fadeOut("slow")
       $("#search_box").empty();
