Pharmacy bug fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   </div>
 <% end %>
 <% if alert.present? %>
-  <div class="alert alert-dange">
+  <div class="alert alert-danger">
     <p class="alert"><%= alert %></p>
   </div>
 <% end %>
