--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Nombre por definir", root_path, class: "navbar-brand" %>
+      <%= link_to "My farmacia", root_path, class: "navbar-brand" %>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
@@ -19,6 +19,9 @@
         </li>
         <li>
           <a href="#">Contacto</a>
+        </li>
+        <li>
+          <%= link_to "Cerrar sesión", destroy_pharmacy_session_path, :method => :delete if pharmacy_signed_in? %>
         </li>
       </ul>
     </div>
