--- a/app/views/profile/pharmacy.html.erb
+++ b/app/views/profile/pharmacy.html.erb
@@ -25,7 +25,7 @@
   <% if @petitions.present? %>
     <div class="row">
       <div class="table-responsive">
-        <h3>Mis medicamentos</h3>
+        <h3>Peticiones</h3>
         <table class="table" id="petitions">
           <thead>
             <tr>
