--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<section class="main-home">
+<!-- <section class="main-home">
   <div class="home-bg" style="background: url(https://res.cloudinary.com/dyujxfph9/image/upload/v1461443025/main_rfvrim.jpg) no-repeat center;"></div>
   <div class="home__header-content">
     <h1 class="intro-title">Búsca el medicamento que necesites</h1>
@@ -36,4 +36,176 @@
       $("#search_box").empty();
     }
   });
-</script>
+</script> -->
+
+
+<!--start: Navbar -->
+<nav class="navbar navbar-default" role="navigation">
+  <!--start: Container -->
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navigation">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index-2.html"> Farmacia<span>Popular</span>.</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="main-navigation">
+          <ul class="nav navbar-right navbar-nav">
+        <li class="active"><a href="" >Inicio </a></li>
+        <li ><a href="">¿Qué es la farmacia popular?</a></li>
+        <li ><a href="">Preguntas Frecuentes</a></li>
+          </ul>
+      </div><!-- /.navbar-collapse -->
+  </div>
+  <!--/.container-->
+</nav>
+<!--end: Navbar -->
+<!-- start: Slider -->
+<div class="slider-wrapper">
+
+  <div id="da-slider" class="da-slider">
+    <div class="da-slide">
+      <h2>Twitter Bootstrap</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+      <a href="index-2.html#" class="da-link">Read more</a>
+      <div class="da-img"><img src="assets/img/parallax-slider/twitter.png" alt="image01" /></div>
+    </div>
+    <div class="da-slide">
+      <h2>Responsive Design</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+      <a href="index-2.html#" class="da-link">Read more</a>
+      <div class="da-img"><img src="assets/img/parallax-slider/responsive.png" alt="image02" /></div>
+    </div>
+    <div class="da-slide">
+      <h2>HTML5</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+      <a href="index-2.html#" class="da-link">Read more</a>
+      <div class="da-img"><img src="assets/img/parallax-slider/html5.png" alt="image03" /></div>
+    </div>
+    <div class="da-slide">
+      <h2>CSS3</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+      <a href="index-2.html#" class="da-link">Read more</a>
+      <div class="da-img"><img src="assets/img/parallax-slider/css3.png" alt="image04" /></div>
+    </div>
+    <nav class="da-arrows">
+      <span class="da-arrows-prev"></span>
+      <span class="da-arrows-next"></span>
+    </nav>
+  </div>
+
+</div>
+<!-- end: Slider -->
+
+<!--start: Container -->
+<div class="container">
+
+    <div class="jumbotron">
+    <h3>
+      Busca Aquí los medicamiento que necesites
+    </h3>
+      <p><a class="btn btn-primary btn-lg">Buscar</a></p>
+    </div><!--/.jumbotron-->
+
+
+  <!-- start: Row -->
+    <div class="row">
+
+    <div class="col-sm-9">
+
+      <div class="title"><h3>Información Relevante</h3></div>
+
+      <!-- start: Row -->
+          <div class="row">
+
+        <div class="col-sm-4">
+
+          <div class="item-description">
+            <h3>Horarios y lugar de atención</h3>
+            <p>UBICACIÓN<br />
+            Los Acacios 43 (Municipalidad de San Pedro de la Paz)</p>
+            <p>HORARIO DE ATENCIÓN<br />
+            08:05 – 14:00 horas de Lunes a Viernes</p>
+            <p>TELEFONO<br />
+            41-2501928</p>
+            <p>Mail<br />
+            farmaciapopular@sanpedrodelapaz.cl</p>
+          </div>
+
+          </div>
+
+        <div class="col-sm-4">
+
+          <div class="item-description">
+            <h3>¿Quiénes pueden acceder?</h3>
+            <p>TODOS LOS SAMPEDRINOS Y SAMPEDRINAS pueden inscribirse en la Farmacia Popular Llacolén, sin importar sus ingresos, condición social o sistema de salud.<br/></p>
+            <p>Documentos a Presentar<br/></p>
+            1. Registro Social de Hogares(RSH).<br/>
+            2. Receta Médica con máximo seis meses de antigüedad.<br/>
+            3. Fotocopia carnet de identidad.</p>
+          </div>
+
+            </div>
+
+        <div class="col-sm-4">
+          <div class="item-description">
+            <h3>Mobile App</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+          </div>
+
+        </div>
+
+        </div>
+      <!-- end: Row -->
+
+    </div>
+
+</div>
+<!--end: Container-->
+
+<!-- start: Copyright -->
+<div id="copyright">
+
+  <!-- start: Container -->
+  <div class="container">
+
+    <div class="col-sm-12">
+
+      <p>
+        &copy; 2016, by Mi Farmacia.
+      </p>
+
+    </div>
+
+  </div>
+  <!-- end: Container  -->
+
+</div>
+<!-- end: Copyright -->
+
+<!-- start: Java Script -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="assets/javascripts/jquery-1.9.1.min.js"></script>
+<script src="assets/javascripts/bootstrap.min.js"></script>
+<script src="assets/javascripts/jquery.isotope.min.js"></script>
+<script src="assets/javascripts/jquery.imagesloaded.js"></script>
+<script src="assets/javascripts/flexslider.js"></script>
+<script src="assets/javascripts/carousel.js"></script>
+<script src="assets/javascripts/jquery.cslider.js"></script>
+<script src="assets/javascripts/slider.js"></script>
+<script src="assets/javascripts/jquery.fancybox.js"></script>
+
+<script src="assets/javascripts/excanvas.js"></script>
+<script src="assets/javascripts/jquery.flot.js"></script>
+<script src="assets/javascripts/jquery.flot.pie.min.js"></script>
+<script src="assets/javascripts/jquery.flot.stack.js"></script>
+<script src="assets/javascripts/jquery.flot.resize.min.js"></script>
+
+<script src="assets/javascripts/custom.js"></script>
+<!-- end: Java Script -->
